# ffihell

./: Foo.hs  build_c.sh  build_lib.sh  clean.sh  ffihell.cabal  init.c  tryit.c
